objects/MessagingSession.object
<CustomObject>
    <fields>
        <fullName>SDO_LiveMessagingChannel__c</fullName>
        <description>JD - 10/4/22 - Channel formula adds visual aid to show users quickly what type of message this was connected to.</description>
        <formula>IMAGE(CASE(MessagingChannel.MessageType,
&quot;Facebook&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/facebook.png&quot;,
&quot;Text&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/sms.png&quot;,
&quot;Embedded Messaging&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/embeddedmessaging.png&quot;,

&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/phone_else_.png&quot;),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_LiveMessaging_Subject__c</fullName>
        <description>JD - 10/4/22 - Subject connects to Case to bring in related Case information to quickly enhance and support reports</description>
        <formula>IF(ISPICKVAL( SDO_MessagingSession_BotName__c, &quot;Buyer Assistant&quot;),
 MessagingEndUser.Name &amp; &quot; | Buyer Assistant Bot Sales Inquiry&quot;,
    BLANKVALUE(Case.Subject, &apos;Support &apos; + TEXT(MessagingChannel.MessageType) + &apos; Conversation&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MessagingSession_BotName__c</fullName>
        <description>JD - Used to assist in reporting and other logic related to messaging sessions based on Bot</description>
        <label>Bot Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Luna</fullName>
                </value>
                <value>
                    <fullName>Buyer Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_IsEnhanced__c</fullName>
        <description>Whether the associated Messaging Channel is an Enhanced Channel (or standard)</description>
        <formula>ISPICKVAL(MessagingChannel.PlatformType, &apos;Enhanced&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates this session is associated to an Enhanced Messaging Channel</inlineHelpText>
        <label>Is Enhanced</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Messaging_Sessions</fullName>
        <columns>Owner</columns>
        <columns>Name</columns>
        <columns>MessagingChannel</columns>
        <columns>MessagingEndUser</columns>
        <columns>Status</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>PlatformType</columns>
        <filterScope>Mine</filterScope>
        <label>All Messaging Sessions</label>
    </listViews>
    <listViews>
        <fullName>BuyerAssistant_Queue_Group_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>Buyer Assistant Queue Group</label>
        <queue>BuyerAssistant_Queue_Group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MessagingSession_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>Messaging Session Queue</label>
        <queue>MessagingSession</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDO_Service_LiveMessage_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>SMS</label>
        <queue>SDO_Service_LiveMessage</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDO_Service_Messaging_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>Messaging</label>
        <queue>SDO_Service_Messaging</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>